--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -31,7 +31,7 @@ h1 {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin-top: 200px;
+    margin-top: 100px;
 }
 
 .side {
@@ -40,18 +40,20 @@ h1 {
     margin: 3px;
 }
 #circle {
-    width: 400px;
-    height: 400px;
-    background: red;
+    width: 500px;
+    height: 500px;
+    background-image: linear-gradient(#2feb96,#011703);
     border-radius: 50%;
     text-align: center;
   }
 
   #shape-text {
-    justify-content: center;
-    align-items: center;
+    position: relative;
+    top: 160px;
+    text-align: center;
     height: 200px;
     font-size: 400%;
+    color: #fefafa;
   }
 #form label{
     display: block;
